# ratel-core

./: .gitignore  README.md  build.gradle  gradle.properties  ratelRsaKey.md  settings.gradle
authorizer/: build.gradle
base-lib-allcommon/: build.gradle
base-lib-apache-ant-zip/: README.md  build.gradle
base-lib-apk-parser/: README.md  build.gradle
base-lib-d8/: build.gradle
base-lib-dx/: build.gradle
base-lib-ratel-api/: build.gradle  settings.gradle
base-lib-ratel-api/ratel-api/: .gitignore  README.md
base-lib-ratel-api/ratel-api/gradle/wrapper/: gradle-wrapper.properties
base-lib-ratel-extension/: build.gradle
base-lib-ratel-extension/ratelextension/: .gitignore  README.md  build.gradle
base-lib-stub/: build.gradle
base-lib-xposed-bridge/: build.gradle
base-lib-xposed-bridge/src/main/: AndroidManifest.xml
container-builder-helper/: build.gradle
container-builder-rdp/: build.gradle
container-builder-repkg/: .gitignore  BuilderRepkgBase.gradle  build-debug.gradle  build-release.gradle  build.gradle  proguard-rules.pro
container-builder-transformer/: build.gradle
container-inject-template/: build.gradle  proguard-rules.pro
container-inject-template/src/main/: AndroidManifest.xml
container-kratos-bootstrap/: build.gradle
container-kratos-bootstrap/src/main/: AndroidManifest.xml
container-multi-dex-bootstrap/src/main/: AndroidManifest.xml
container-runtime-repkg/: build.gradle  proguard-rules.pro
container-runtime-repkg-bootstrap/: build.gradle
container-runtime-repkg/src/main/: AndroidManifest.xml
container-runtime-repkg/src/main/cpp/: CMakeLists.txt
container-runtime-repkg/src/main/cpp/Foundation/: ExecveHandler.cpp  ExecveHandler.h  IORelocator.cpp  IORelocator.h  Log.h  MacAddressFake.cpp  MacAddressFake.h  MapsRedirector.cpp  MapsRedirector.h  NativeStackTracer.cpp  NativeStackTracer.h  RatelPatch.cpp  RatelPatch.h  SandboxFs.cpp  SandboxFs.h  SandboxProperties.cpp  SandboxProperties.h  VMHook.cpp  VmHook.h  canonicalize_md.c  dlfcn_nougat.cpp  elf_util.cpp  elf_util.h  lock.h
container-runtime-repkg/src/main/cpp/Foundation/syscall/: BinarySyscallFinder.cpp
container-runtime-repkg/src/main/cpp/Jni/: Helper.cpp  Helper.h  IOController.cpp  VAJni.cpp  VAJni.h
container-runtime-repkg/src/main/cpp/MapHide/: MapsHideHandler.cpp  MapsHideHandler.h  hide.cpp  hide.h  nativeHideJni.cpp  pmparser.c
container-runtime-repkg/src/main/cpp/Substrate/: And64InlineHook.cpp  Buffer.hpp  SubstrateDebug.hpp  SubstrateHook.cpp  SubstrateHook.h  SubstratePosixMemory.cpp  SubstrateX86.hpp  hde64.c  hde64.h  table64.h
container-runtime-repkg/src/main/cpp/anr/: anrDetector.cpp
container-runtime-repkg/src/main/cpp/arthook/: art.cpp  art.h  cast.cpp  cast.h  inst.cpp  inst.h  native_api.cpp  native_api.h  offset.cpp  offset.h  sandhook.cpp  trampoline.cpp  trampoline.h
container-runtime-repkg/src/main/cpp/arthook/arch/: arch.h  arch_base.h  arm32.S  arm64.S
container-runtime-repkg/src/main/cpp/authorize/: Base64.cpp  DES.cpp  RSA.cpp  RatelLicence.cpp  RatelLicence.h
container-runtime-repkg/src/main/cpp/bhook/: bh_jni.c  bh_task_manager.h
container-runtime-repkg/src/main/cpp/ele7enxxh/: inlineHook.c  inlineHook.h  relocate.c  relocate.h
container-runtime-repkg/src/main/cpp/env/debug/: ratel_build_type.h
container-runtime-repkg/src/main/cpp/env/release/: ratel_build_type.h
container-runtime-repkg/src/main/cpp/unpack/: MyMd5.cpp  MyMd5.h  Unpacker.cpp  Unpacker.h  cxx_helper.h  dex_ratel.h  elf_image.cpp  elf_image.h  process_map.cpp  process_map.h
container-runtime-repkg/src/main/cpp/xhook/: xh_log.h
container-runtime-repkg/src/main/cpp/zipalign/: ZipAlign.cpp  ZipEntry.cpp  ZipEntry.h  ZipFile.cpp  ZipFile.h
container-runtime-repkg/src/main/cpp/zipalign/android-base/: file.cpp  file.h  logging.cpp  logging.h  memory.h  strings.cpp  strings.h  unique_fd.h  utf8.cpp  utf8.h
container-runtime-repkg/src/main/cpp/zipalign/utils/: Compat.h  Errors.h  FileMap.cpp  FileMap.h  Log.h  SharedBuffer.cpp  SharedBuffer.h  TypeHelpers.h  Vector.h  VectorImpl.cpp  VectorImpl.h  safe_iop.c  safe_iop.h
container-runtime-repkg/src/main/cpp/zipalign/ziparchive/: entry_name_utils-inl.h  zip_archive.cc  zip_archive.h  zip_archive_common.h  zip_archive_private.h  zip_archive_stream_entry.h  zip_writer.cc  zip_writer.h
container-runtime-repkg/src/main/cpp/zipalign/zopfli/: blocksplitter.c  cache.c  cache.h  deflate.c  deflate.h  gzip_container.c  gzip_container.h  hash.c  hash.h  katajainen.c  katajainen.h  lz77.c  lz77.h  squeeze.c  squeeze.h  tree.c  tree.h  util.c  util.h  zlib_container.c  zopfli.h  zopfli_bin.c  zopfli_bin.h
container-slave-loader/: build.gradle
container-slave-loader/src/main/: AndroidManifest.xml
container-xc-method-wrapper/: build.gradle
container-xc-method-wrapper/src/main/: AndroidManifest.xml
container-zelda-bootstrap/src/main/: AndroidManifest.xml
crack-demoapp/: build.gradle
crack-demoapp/src/main/: AndroidManifest.xml
crack-demoapp/src/main/assets/: xposed_init
demoapp/: build.gradle
demoapp/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
managerbridge/: build.gradle
managerbridge/src/main/: AndroidManifest.xml
nativehide/: build.gradle
nativehide/src/main/: AndroidManifest.xml
nativehide/src/main/cpp/: CMakeLists.txt  MapsHideHandler.cpp  hide.cpp  hide.h  jni.cpp  wrap.cpp
ratelmanager/: .gitignore  build.gradle  gradle.properties  proguard-rules.pro
ratelmanager/src/main/: AndroidManifest.xml
script/: build_demo_app_repkg_debug.sh  build_demo_app_repkg_release.sh  build_ratel_manager.sh  build_ratel_repkg.sh  create-custom-dist.sh  create-dev-dist.sh  create-dist.sh  deploy_ratal_api.sh  deploy_ratal_extension.sh  dev.sh  hermes_bksv1_key  make_base_comon.sh  monthly_temp.txt  monthly_temp_obt.txt  prod.sh  ratel-keygen.sh  ratel.bat  ratel.sh  signApk.sh  sync_dex_opt_src.sh
script/dev/: build_demo_app_repkg_debug.sh  build_demo_app_repkg_release.sh  deploy_ratal_api.sh  deploy_ratal_extension.sh  make_base_comon.sh  sync_dex_opt_src.sh
(+1816 files in other folders)
